updated version info

--- a/Dockerfile.ubi
+++ b/Dockerfile.ubi
@@ -3,7 +3,7 @@ FROM quay.io/app-sre/boilerplate:image-v2.1.0 AS builder
 ENV GOPATH=$APP_ROOT
 COPY . /go/src/github.com/vmware-tanzu/velero
 WORKDIR /go/src/github.com/vmware-tanzu/velero
-RUN CGO_ENABLED=0 GOOS=linux go build -a -mod=mod -ldflags '-extldflags "-static" -X github.com/vmware-tanzu/velero/pkg/buildinfo.Version=konveyor-dev' -o /go/src/velero github.com/vmware-tanzu/velero/cmd/velero
+RUN CGO_ENABLED=0 GOOS=linux go build -a -mod=mod -ldflags '-extldflags "-static" -X github.com/vmware-tanzu/velero/pkg/buildinfo.Version=v1.7.0-konveyor' -o /go/src/velero github.com/vmware-tanzu/velero/cmd/velero
 
 FROM registry.access.redhat.com/ubi8/go-toolset:1.14.7 AS restic-builder
 ENV GOPATH=$APP_ROOT
