--- a/Dockerfile.ubi
+++ b/Dockerfile.ubi
@@ -3,13 +3,13 @@ FROM quay.io/app-sre/boilerplate:image-v2.1.0 AS builder
 ENV GOPATH=$APP_ROOT
 COPY . /go/src/github.com/vmware-tanzu/velero
 WORKDIR /go/src/github.com/vmware-tanzu/velero
-RUN CGO_ENABLED=0 GOOS=linux go build -a -mod=mod -ldflags '-extldflags "-static" -X github.com/vmware-tanzu/velero/pkg/buildinfo.Version=v1.7.0-konveyor' -o /go/src/velero github.com/vmware-tanzu/velero/cmd/velero
+RUN CGO_ENABLED=0 GOOS=linux go build -a -mod=mod -ldflags '-extldflags "-static" -X github.com/vmware-tanzu/velero/pkg/buildinfo.Version=v1.7.1-konveyor' -o /go/src/velero github.com/vmware-tanzu/velero/cmd/velero
 
 FROM registry.access.redhat.com/ubi8/go-toolset:1.14.7 AS restic-builder
 ENV GOPATH=$APP_ROOT
 RUN mkdir -p $APP_ROOT/src/github.com/restic \
 && cd $APP_ROOT/src/github.com/restic \
-&& git clone https://github.com/konveyor/restic -b konveyor-dev
+&& git clone https://github.com/konveyor/restic -b konveyor-0.12.1
 WORKDIR $APP_ROOT/src/github.com/restic/restic
 RUN CGO_ENABLED=0 GOOS=linux go build -a -mod=mod -ldflags '-extldflags "-static"' -o $APP_ROOT/src/restic github.com/restic/restic/cmd/restic
 
