run upstream velero ci against downstream
Signed-off-by: Wesley Hayutin <weshayutin@gmail.com>

ah that's better :)

Co-authored-by: Tiger Kaovilai <passawit.kaovilai@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -46,6 +46,10 @@ script:
 
 jobs:
   include:
+  - stage: TEST - make ci
+    script: 
+    - | 
+      make update ci
   - stage: build images
     arch: ppc64le
   - arch: s390x
