--- a/Makefile.prow
+++ b/Makefile.prow
@@ -1,6 +1,6 @@
 # warning: verify this inside a container with following:
 # go generates expects working directory to be in GOPATH/src
-# docker run -it --rm -v `pwd`:/go/src/github.com/vmware-tanzu/velero -w /go/src/github.com/vmware-tanzu/velero golang:1.16 bash -c "make -f Makefile.prow ci"
+# docker run -it --rm -v `pwd`:/go/src/github.com/vmware-tanzu/velero -w /go/src/github.com/vmware-tanzu/velero golang:1.19 bash -c "make -f Makefile.prow ci"
 # 
 # otherwise unintended system changes may include, replacing your currently installed kubectl, binaries in GOBIN, files in GOPATH/src
 # 
@@ -23,7 +23,7 @@ ci:
 	make -f $(MAKEFILE) verify all test
 
 .PHONY: verify
-verify: goimports code-generator controller-gen kubectl
+verify: goimports controller-gen kubectl
 # add PROWBIN to PATH
 	@echo Verifying with PATH=$(PROWBIN):$(PATH)
 # Per
@@ -33,7 +33,7 @@ verify: goimports code-generator controller-gen kubectl
 #  and then run verify from there
 #  otherwise the code-generator tools will fail
 	mkdir -p $(GOSRC)/github.com/vmware-tanzu/
-	cp -r . $(GOSRC)/github.com/vmware-tanzu/velero
+	cp -r . $(GOSRC)/github.com/vmware-tanzu/velero || true
 	cd $(GOSRC)/github.com/vmware-tanzu/velero && \
 	PATH=$(PROWBIN):$(PATH) GOFLAGS=$(GOFLAGS) hack/verify-all.sh
 
